--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,43 @@
 
     <groupId>groupId</groupId>
     <artifactId>app-collection</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <encoding>UTF-8</encoding>
+        <scala.version>2.11</scala.version>
+        <avro.version>1.8.2-cdh6.3.1</avro.version>
+        <crunch.version>0.11.0-cdh6.3.1</crunch.version>
+        <flume.version>1.9.0-cdh6.3.1</flume.version>
+        <connector.version>hadoop3-1.9.10-cdh6.3.1</connector.version>
+        <hadoop.version>3.0.0-cdh6.3.1</hadoop.version>
+        <hbase.version>2.1.0-cdh6.3.1</hbase.version>
+        <indexer.version>1.5-cdh6.3.1</indexer.version>
+        <hive.version>2.1.1-cdh6.3.1</hive.version>
+        <kafka.version>2.2.1-cdh6.3.1</kafka.version>
+        <kitesdk.version>1.0.0-cdh6.3.1</kitesdk.version>
+        <kudu.version>1.10.0-cdh6.3.1</kudu.version>
+        <oozie.version>5.1.0-cdh6.3.1</oozie.version>
+        <pig.version>0.17.0-cdh6.3.1</pig.version>
+        <search.version>1.0.0-cdh6.3.1</search.version>
+        <sentry.version>2.1.0-cdh6.3.1</sentry.version>
+        <solr.version>7.4.0-cdh6.3.1</solr.version>
+        <spark.version>2.4.0-cdh6.3.1</spark.version>
+        <sqoop.version>1.4.7-cdh6.3.1</sqoop.version>
+        <zookeeper.version>3.4.5-cdh6.3.1</zookeeper.version>
+        <flink.version>1.12.2</flink.version>
     </properties>
 
-    <dependencies>
+    <repositories>
+        <repository>
+            <id>cloudera</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+        </repository>
+    </repositories>
 
+    <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -23,7 +52,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.13.2</version>
+            <version>2.9.0</version>
         </dependency>
 
         <dependency>
@@ -42,21 +71,21 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-scala_2.11</artifactId>
-            <version>1.12.0</version>
+            <version>${flink.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-scala -->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-scala_2.11</artifactId>
-            <version>1.12.0</version>
+            <version>${flink.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-kafka -->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka_2.11</artifactId>
-            <version>1.12.0</version>
+            <version>${flink.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
@@ -79,19 +108,11 @@
             <version>2.2.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest -->
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.11</artifactId>
-            <version>3.3.0-SNAP3</version>
-            <scope>test</scope>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-clients -->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-clients_2.11</artifactId>
-            <version>1.12.0</version>
+            <version>${flink.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
@@ -115,6 +136,7 @@
             <version>2.12.1</version>
         </dependency>
 
+
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -128,9 +150,59 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.12.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-hive_2.11</artifactId>
+            <version>${flink.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-api-scala-bridge_2.11</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-planner_2.11</artifactId>
+            <version>${flink.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-planner-blink_2.11</artifactId>
+            <version>${flink.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-common</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+            <version>${hive.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.dic</include>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -145,7 +217,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.1.6</version>
+                <version>3.2.0</version>
                 <configuration>
                     <scalaCompatVersion>2.11</scalaCompatVersion>
                     <scalaVersion>2.11.12</scalaVersion>
